# Uzima-Contracts

./: .clippy.toml  .env.example  .gitignore  .gitleaks.toml  .meta-tx-commit-msg.txt  .pre-commit-config.yaml  .shellcheckrc  .trufflehog.yaml  455-code-complexity-metrics-limits.md  456-comprehensive-testing-guidelines.md  459-contract-versioning-changelog-standards.md  464-contract-invariant-documentation.md  CHANGELOG.md  CI_STATUS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Logs.md  MULTI_REGION_DR_SUMMARY.md  MULTI_REGION_DR_TESTING_GUIDE.md  NETWORK_CONFIG_PR_DESCRIPTION.md  POSTMORTEM_IMPLEMENTATION_COMPLETE.md  PROPERTY_BASED_TESTS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_767.md  PR_DESCRIPTION_772.md  PR_DESCRIPTION_773.md  README.md  TEST_STATUS.md  all_symbols.csv  build_error.txt  build_error2.txt  check_errors.txt  ci.yml  clippy.toml  contract.md  contributor.md  docker-compose.yml  dockerfile  (+19 more)
.cargo/: audit.toml
contract_optimizer/: Cargo.toml  README.md
contract_optimizer/src/: complexity.rs  lib.rs  main.rs  metrics.rs
contracts/appointment_booking_escrow/: Cargo.toml
contracts/appointment_booking_escrow/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/audit/: Cargo.toml
contracts/audit/src/: batch_audit.rs  errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/audit_forensics/: Cargo.toml
contracts/audit_forensics/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/code_ownership/: Cargo.toml
contracts/code_ownership/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/contract_behavior_fuzzing/: Cargo.toml
contracts/contract_behavior_fuzzing/src/: events.rs  lib.rs
contracts/contract_behavior_fuzzing/tests/: access_control_fuzz.rs  consent_handling_fuzz.rs  cross_contract_fuzz.rs  identity_registry_fuzz.rs  sut_token_fuzz.rs  token_sale_fuzz.rs
contracts/contract_registry/: Cargo.toml
contracts/contract_registry/src/: lib.rs  test.rs
contracts/credential_notifications/: Cargo.toml
contracts/credential_notifications/src/: events.rs  lib.rs
contracts/drug_discovery/: Cargo.toml
contracts/drug_discovery/src/: events.rs  lib.rs  test.rs
contracts/emergency_access/: Cargo.toml  README.md
contracts/emergency_access/src/: lib.rs  test.rs
contracts/emr_integration/: Cargo.toml
contracts/emr_integration/src/: benchmarks.rs  events.rs  lib.rs  test.rs
contracts/health_check/: Cargo.toml
contracts/health_check/src/: events.rs  lib.rs  test.rs
contracts/healthcare_data_marketplace/: Cargo.toml
contracts/healthcare_data_marketplace/src/: events.rs  lib.rs  test.rs
contracts/medical_records/: Cargo.toml  cargo.toml  medical_records.rs
contracts/medical_records/src/: benchmarks.rs  errors.rs  event_schema.rs  events.rs  lib.rs  load_tests.rs  policy.rs  quality_assurance.rs  rate_limiting.rs  rate_limiting_tests.rs  storage.rs  test.rs  test_input_validation.rs  test_migration.rs  test_permissions.rs  test_timestamp_normalization.rs  timestamp_normalization.rs  types.rs  validation.rs
contracts/medical_records/tests/: ai_integration.rs  comprehensive_coverage.rs  crypto_security_tests.rs  did_integration_test.rs  logging_tests.rs  medical_records_test.rs  meta_tx_integration_test.rs  negative_tests.rs  policy_integration_test.rs  quality_assurance_integration_tests.rs  uzima_integration_suite.rs  zk_access_tests.rs  zk_property_tests.rs
contracts/mental_health_platform/: Cargo.toml  README.md  clippy_out.txt  clippy_v3.txt  clippy_v3_utf8.txt  clippy_v4.txt  clippy_v4_utf8.txt  clippy_v5.txt  clippy_v5_utf8.txt  clippy_v6.txt  clippy_v6_utf8.txt  clippy_v7.txt  clippy_v7_utf8.txt  clippy_v8.txt  clippy_v8_utf8.txt  clippy_v9.txt  clippy_v9_utf8.txt  mhp_clippy.txt
contracts/mental_health_platform/src/: anonymization.rs  assessments.rs  crisis_intervention.rs  errors.rs  events.rs  lib.rs  medication.rs  mood_tracking.rs  peer_support.rs  professional_directory.rs  suicide_prevention.rs  test.rs  therapy.rs  types.rs  wellness.rs
contracts/mental_health_support/: Cargo.toml
contracts/mental_health_support/src/: events.rs  lib.rs
contracts/patient_gamification/: Cargo.toml
contracts/patient_gamification/src/: events.rs  lib.rs
contracts/upgradeability/: Cargo.toml
contracts/upgradeability/src/: events.rs  lib.rs  lifecycle.rs  migration.rs  safety_tests.rs  test.rs  upgrade_safety.rs  versioning.rs
contracts/zkp_registry/: Cargo.toml
libs/replay_protection/: Cargo.toml
libs/validation_utils/: Cargo.toml
tests/: CI_VERIFICATION_RESULTS.md  Cargo.toml  FRAMEWORK.md  PRESERVATION_REQUIREMENTS.md  audit_cross_contract_test.rs  audit_load_tests.rs  bug_condition_exploration_merge_conflict.ps1  bug_condition_exploration_merge_conflict.sh  consent_integration_test.rs  consent_invariant_tests.rs  contract_registry_integration.rs  deterministic_fuzz_bridge_tests.rs  did_integration_test.rs  error_handling.rs  escrow_concurrency_stress_tests.rs  event_schema_validation.rs  event_system_test.rs  event_validation.rs  genomics_tests.rs  golden_file_sdk_tests.rs  golden_tests.rs  healthcare_reputation_test.py  lib.rs  medical_records_negative_tests.rs  meta_tx_benchmarks.rs  meta_tx_integration_test.rs  performance_budget_gate_test.sh  preservation_property_tests.rs  rbac_invariant_tests.rs  snapshot_regression_tests.rs  storage_write_amplification_benchmarks.rs  upgradeability_tests.rs  validation_integration_test.rs  verify_merge_fix.ps1
tests/.tmp-zk/: commitments.json  proof.json  proof_bad.json  vk.json
tests/e2e/: smoke_deploy_tests.sh  smoke_e2e.rs
tests/integration/: cross_chain_tests.rs  healthcare_workflows.rs  ihe_fhir_integration_tests.rs  mod.rs  multi_region_dr_integration.rs
tests/integration_framework/: Cargo.toml
tests/unit/: identity_registry_test.rs  mod.rs  performance_tests.rs  property_based_tests.rs
tests/upgrade_and_migration_tests/: Cargo.toml
tests/utils/: assertions.rs  contract_error.rs  contract_fixtures.rs  contract_utils.rs  integration_framework.rs  mod.rs  performance.rs  test_data.rs  test_fixtures.rs
(+982 files in other folders)
