[workspace]
resolver = "2"
members = [
    "contracts/medical_records",
    "contracts/ai_analytics",
    "contracts/anomaly_detection",
    "contracts/anomaly_detector",
    "contracts/cross_chain_access",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/soroban-project"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", default-features = false }
soroban-cli = "21.0.0"

# Force compatible versions to fix stellar-xdr dependency conflicts
arbitrary = "=1.3.2"
derive_arbitrary = "=1.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
