[workspace]
resolver = "2"
members = [
    "contracts/ai_analytics",
    "contracts/anomaly_detection",
    "contracts/anomaly_detector",
    "contracts/audit_forensics",
    "contracts/clinical_trial",
    "contracts/credential_registry",
    "contracts/cross_chain_access",
    "contracts/cross_chain_bridge",
    "contracts/cross_chain_identity",
    "contracts/crypto_registry",
    "contracts/dispute_resolution",
    "contracts/emr_integration",
    "contracts/escrow",
    "contracts/explainable_ai",
    "contracts/federated_learning",
    "contracts/fhir_integration",
    "contracts/governor",
    "contracts/healthcare_compliance",
    "contracts/healthcare_data_conversion",
    "contracts/healthcare_oracle_network",
    "contracts/healthcare_payment",
    "contracts/homomorphic_registry",
    "contracts/identity_registry",
    "contracts/medical_consent_nft",
    "contracts/medical_records",
    "contracts/medical_record_backup",
    "contracts/medical_record_search",
    "contracts/meta_tx_forwarder",
    "contracts/mpc_manager",
    "contracts/notification_system",
    "contracts/payment_router",
    "contracts/predictive_analytics",
    "contracts/provider_directory",
    "contracts/regulatory_compliance",
    "contracts/remote_patient_monitoring",
    "contracts/reputation",
    "contracts/sut_token",
    "contracts/timelock",
    "contracts/token_sale",
    "contracts/treasury_controller",
    "contracts/upgradeability",
    "contracts/upgrade_manager",
    "contracts/zkp_registry",
    "contracts/zk_verifier",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/soroban-project"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0" }
soroban-cli = "21.0.0"

# Force compatible versions to fix stellar-xdr dependency conflicts
arbitrary = "1.3.2"
derive_arbitrary = "1.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true