[package]
name = "uzima-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
contract_registry = { path = "../contracts/contract_registry" }
medical_records = { path = "../contracts/medical_records" }
patient_portal = { path = "../contracts/patient_portal" }
mental_health_support = { path = "../contracts/mental_health_support" }
sut_token = { path = "../contracts/sut_token" }
multi_region_orchestrator = { path = "../contracts/multi_region_orchestrator", package = "multi-region-orchestrator", features = ["testutils"] }
failover_detector = { path = "../contracts/failover_detector", package = "failover-detector", features = ["testutils"] }
sync_manager = { path = "../contracts/sync_manager", package = "sync-manager", features = ["testutils"] }
regional_node_manager = { path = "../contracts/regional_node_manager", package = "regional-node-manager", features = ["testutils"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
name = "uzima_tests"
path = "lib.rs"
