[package]
name = "uzima-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { workspace = true }
medical_records = { path = "../contracts/medical_records" }
sut_token = { path = "../contracts/sut_token" }
patient_consent_management = { path = "../contracts/patient_consent_management" }
rbac = { path = "../contracts/rbac" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
name = "uzima_tests"
path = "lib.rs"
