[package]
name = "emr_integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# `alloc` enables soroban-sdk's bump allocator (required for `extern crate alloc` in lib.rs).
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]
