[package]
name = "healthcare_data_marketplace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
governance_commons = { path = "../../libs/governance_commons" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.6.0"

[features]
default = []
testutils = ["soroban-sdk/testutils"]
