[package]
name = "medical_records"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
common_error = { path = "../common_error" }
patient_consent_management = { path = "../patient_consent_management" }
upgradeability = { path = "../upgradeability" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
anomaly_detection = { path = "../anomaly_detection" }
predictive_analytics = { path = "../predictive_analytics" }
explainable_ai = { path = "../explainable_ai" }
zk_verifier = { path = "../zk_verifier" }
credential_registry = { path = "../credential_registry" }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
