[package]
name = "mental_health_platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
upgradeability = { path = "../upgradeability" }
medical_records = { path = "../medical_records" }
healthcare_compliance = { path = "../healthcare_compliance" }
identity_registry = { path = "../identity_registry" }
notification_system = { path = "../notification_system" }
ai_analytics = { path = "../ai_analytics" }
predictive_analytics = { path = "../predictive_analytics" }
zkp_registry = { path = "../zkp_registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
