[package]
name = "upgradeability"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "25.3.1" }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]
